fix overflow-x auto

--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -645,8 +645,12 @@ input[name=collectionName]{
 /* 5.3 UserHead.js */
 //////////////////////////////////////////////////////
 
+// Max-width: 100% - because of overflow-x: auto //
+
 .mainpanel__userbase{
+  max-width: 100%;
   section{
+    max-width: 100%;
     box-shadow: 0px 6px 8px #00000029;
     border-radius: 25px;
     padding: 50px;
